<resources>
    <string name="app_name">Colegio San Rafael</string>
    <string name="btnMenuRegistrar">Registrar</string>
    <string name="btnMenuConsultar">Consultar</string>
    <string name="btnMenuModificar">Modificar</string>
    <string name="btnMenuEliminar">Eliminar</string>
    <string name="tvTituloColegio">Colegio San Rafael</string>
    <string name="btnMenu">Menú</string>
    <string name="etRegistrarNombre">Nombre</string>
    <string name="etRegistrarApellidos">Apellidos</string>
    <string name="etRegistrarTeléfono">Teléfono</string>
    <string name="etRegistrarCorreo">Correo</string>
    <string name="etRegistrarID">ID</string>
    <string name="btnRegistrarAlumno">Registrar alumno</string>
    <string name="btnRegistrarNotas">Registrar notas</string>
    <string name="spCurso">Curso</string>
    <string-array name="spinner_items">
        <item>Curso</item> <!-- Este elemento será el "hint", no seleccionable -->
        <item>1A</item>
        <item>1B</item>
        <item>1C</item>
        <item>2A</item>
        <item>2B</item>
        <item>2C</item>
        <item>3A</item>
        <item>3B</item>
        <item>3C</item>
        <item>4A</item>
        <item>4B</item>
        <item>4C</item>
    </string-array>
    <string name="etNota">Nota</string>
    <string name="btnRegistrarNota">Registrar nota</string>
    <string name="btnAtras">Atrás</string>
    <string-array name="spinner_items_tri">
        <item>Trimestre</item> <!-- Este elemento será el "hint", no seleccionable -->
        <item>Primer trimestre</item>
        <item>Segundo trimestre</item>
        <item>Tercer trimestre</item>
    </string-array>
    <string-array name="spinner_items_asig">
        <item>Asignatura</item> <!-- Este elemento será el "hint", no seleccionable -->
        <item>Matemáticas</item>
        <item>Lengua</item>
        <item>Biología</item>
        <item>Inglés</item>
        <item>Educación Física</item>
    </string-array>
    <string name="tvEliminarID">Introduzca el ID del alumno:</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="tvConsultar">Consultar</string>
    <string name="btnConsultarAlumno">Consultar alumno</string>
    <string name="btnConsultarCurso">Consultar curso</string>
    <string name="tvTelefono">Teléfono: </string>
    <string name="tvCorreo">Correo: </string>
    <string name="tvCurso">Curso: </string>
    <string name="tvNotas">Notas</string>
    <string name="tvNotasMat">Matemáticas</string>
    <string name="tvNotasLeng">Lengua</string>
    <string name="tvNotasBio">Biología</string>
    <string name="tvNotasIng">Inglés</string>
    <string name="tvNotasEF">E.F.</string>
    <string name="tvCabecera1">1T</string>
    <string name="tvCabecera2">2T</string>
    <string name="tvCabecera3">3T</string>
    <string name="btnBuscar">Buscar</string>
    <string name="tvGrupo">Grupo</string>
    <string name="tvPantallaNota">Notas</string>
    <string name="btnModificar">Modificar</string>
    <string name="tvModificarDatos">Modificar Datos</string>
    <string name="tvSplash1">Colegio</string>
    <string name="tvSplash2">San Rafael</string>
    <string name="tvDatos">Datos Alumno</string>
    <string name="tvModNotas">Notas Alumno</string>
    <string name="btnModNotas">Modificar Nota</string>

</resources>