<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarNotasActivity">

    <EditText
        android:id="@+id/etID"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/etRegistrarID"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spAsignatura"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etID" />

    <Spinner
        android:id="@+id/spTrimestre"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spAsignatura" />

    <EditText
        android:id="@+id/etNota"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/etNota"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTrimestre" />

    <Button
        android:id="@+id/btnRegistrarNota"
        android:layout_width="224dp"
        android:layout_height="53dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="108dp"
        android:onClick="registrarNotaAsignatura"
        android:text="@string/btnRegistrarNota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNota" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="44dp"
        android:onClick="Atrás"
        android:text="@string/btnAtras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="44dp"
        android:onClick="Menu"
        android:text="@string/btnMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>