<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1DB7AE"
    android:onClick="PasarRegistrarNotas"
    tools:context=".RegistrarActivity">

    <Button
        android:id="@+id/btnEliminar3"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/boton2"
        android:onClick="registrarAlumno"
        android:text="@string/btnRegistrarAlumno"
        android:textColor="@drawable/txt_boton2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegistrarCorreo" />

    <Spinner
        android:id="@+id/spCurso"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegistrarApellidos" />

    <EditText
        android:id="@+id/etRegistrarNombre"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/etRegistrarNombre"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRegistrarApellidos"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/etRegistrarApellidos"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegistrarNombre" />

    <EditText
        android:id="@+id/etRegistrarTelefono"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/etRegistrarTeléfono"
        android:inputType="phone"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCurso" />

    <EditText
        android:id="@+id/etRegistrarCorreo"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/etRegistrarCorreo"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegistrarTelefono" />

    <TextView
        android:id="@+id/tvPasarRegistrarNotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="58dp"
        android:text="@string/btnRegistrarNotas"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPasarRegistrarNota" />

    <ImageView
        android:id="@+id/btnPasarRegistrarNota"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="40dp"
        android:onClick="PasarRegistrarNotas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/flecha_icon_w" />

</android.support.constraint.ConstraintLayout>